Folder improvements
- Don't allow folders with subfolders to be deleted
- Also `BuildWorld` -> `Folder` assignment in world object instead of map in `FolderStorageImpl`